--- a/CSharp/App/Modules/Tree/Tree.csproj
+++ b/CSharp/App/Modules/Tree/Tree.csproj
@@ -85,11 +85,20 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BehaviorTreeLayout.cs" />
-    <Compile Include="BehaviorTreeViewModel.cs" />
-    <Compile Include="BehaviorTreeModule.cs" />
-    <Compile Include="BehaviorTreeView.xaml.cs">
-      <DependentUpon>BehaviorTreeView.xaml</DependentUpon>
+    <Compile Include="IEventNotifyView.cs" />
+    <Compile Include="SelectNodeChangeEvent.cs" />
+    <Compile Include="TreeInfoViewModel.cs" />
+    <Compile Include="AllTreeViewModel.cs" />
+    <Compile Include="OneTreeData.cs" />
+    <Compile Include="TreeLayout.cs" />
+    <Compile Include="NodeDataEditorViewModel.cs" />
+    <Compile Include="TreeView.xaml.cs">
+      <DependentUpon>TreeView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TreeViewModel.cs" />
+    <Compile Include="TreeModule.cs" />
+    <Compile Include="AllTreeView.xaml.cs">
+      <DependentUpon>AllTreeView.xaml</DependentUpon>
     </Compile>
     <Compile Include="FolderVisiableConverter.cs" />
     <Compile Include="NodeTypeToStringConverter.cs" />
@@ -100,7 +109,7 @@
     </Compile>
     <Compile Include="NodeType.cs" />
     <Compile Include="TreeNodeData.cs" />
-    <Compile Include="TreeNodeDataArray.cs" />
+    <Compile Include="AllTreeData.cs" />
     <Compile Include="TreeNodeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -111,11 +120,15 @@
     <None Include="Packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="BehaviorTreeView.xaml">
+    <Page Include="AllTreeView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Page Include="NodeDataEditor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TreeView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
