--- a/CSharp/Platform/TNetTest/TNetTest.csproj
+++ b/CSharp/Platform/TNetTest/TNetTest.csproj
@@ -56,13 +56,9 @@
     <Compile Include="TcpListenerTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Helper\Helper.csproj">
-      <Project>{24233cd5-a5df-484b-a482-b79cb7a0d9cb}</Project>
-      <Name>Helper</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Logger\Logger.csproj">
-      <Project>{72e16572-fc1f-4a9e-bc96-035417239298}</Project>
-      <Name>Logger</Name>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{19f8f043-1f99-4550-99df-dea5c7d77e55}</Project>
+      <Name>Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\TNet\TNet.csproj">
       <Project>{b42d431a-3a54-4649-942a-c5356d7f9fbc}</Project>
