--- a/CSharp/Game/BehaviorTree/BehaviorTree.csproj
+++ b/CSharp/Game/BehaviorTree/BehaviorTree.csproj
@@ -46,15 +46,21 @@
   <ItemGroup>
     <Compile Include="BehaviorTree.cs" />
     <Compile Include="BlackBoard.cs" />
-    <Compile Include="Config.cs" />
+    <Compile Include="NodeConfig.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="BehaviorTreeFactory.cs" />
+    <Compile Include="NodeAttribute.cs" />
+    <Compile Include="NodeType.cs" />
     <Compile Include="Not.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Selector.cs" />
     <Compile Include="Sequence.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Platform\Common\Common.csproj">
+      <Project>{19f8f043-1f99-4550-99df-dea5c7d77e55}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Component\Component.csproj">
       <Project>{0fa529d1-d0a9-4a8e-90f5-117ce80f2ede}</Project>
       <Name>Component</Name>
