1.配置类放到Common里 2.数据和控制逻辑分离,数据放到Model里,控制逻辑放到Control里,Control以后可以Reload

--- a/CSharp/Platform/Common/Common.csproj
+++ b/CSharp/Platform/Common/Common.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Component\IEventAttribute.cs" />
     <Compile Include="Component\IEvent.cs" />
     <Compile Include="Component\Object.cs" />
+    <Compile Include="Config\ConfigAttribute.cs" />
+    <Compile Include="Config\ConfigCategory.cs" />
+    <Compile Include="Config\ConfigManager.cs" />
+    <Compile Include="Config\IType.cs" />
     <Compile Include="Helper\BigIntegerHelper.cs" />
     <Compile Include="Helper\ByteHelper.cs" />
     <Compile Include="Helper\EnumHelper.cs" />
