--- a/CSharp/App/Editor/app.config
+++ b/CSharp/App/Editor/app.config
@@ -18,6 +18,14 @@
 				<assemblyIdentity name="System.Windows.Interactivity" publicKeyToken="31bf3856ad364e35" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
 			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.Practices.Prism.SharedInterfaces" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-1.1.1.0" newVersion="1.1.1.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.Practices.Prism.PubSubEvents" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
+			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
 	<startup>
@@ -28,7 +36,7 @@
 		<add key="Port" value="8888" />
 		<add key="Account" value="egametang@163.com" />
 		<add key="Password" value="163bio1" />
-		<add key="NodePath" value="D:\Source\Demo\battledemo\Assets\Resources\Config\node.bytes" />
+		<add key="NodePath" value="E:\Source\Demo\battledemo\Assets\Resources\Config\node.bytes" />
 	</appSettings>
 
 
