1.增加对象创建工厂Factory类 2.反序列化不会调用对象的构造函数,可以用BeginInit函数替代 3.抽象出不同的大类,例如World,Unit,Buff等,均继承于GameObject类,所以都拥有增删组件的功能.不同的Unit会拥有不同的组件,同理World,Buff

--- a/CSharp/Game/Model/Model.csproj
+++ b/CSharp/Game/Model/Model.csproj
@@ -47,12 +47,16 @@
   <ItemGroup>
     <Compile Include="Buff.cs" />
     <Compile Include="BuffComponent.cs" />
+    <Compile Include="UnitConfig.cs" />
     <Compile Include="BuffConfig.cs" />
+    <Compile Include="UnitFactory.cs" />
+    <Compile Include="UnitType.cs" />
     <Compile Include="BuffType.cs" />
     <Compile Include="GameObject.cs" />
-    <Compile Include="GameObjectManager.cs" />
+    <Compile Include="UnitComponent.cs" />
     <Compile Include="GlobalConfig.cs" />
     <Compile Include="NodeConfig.cs" />
+    <Compile Include="Unit.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
