--- a/CSharp/Game/Model/Model.csproj
+++ b/CSharp/Game/Model/Model.csproj
@@ -47,15 +47,15 @@
   <ItemGroup>
     <Compile Include="Buff.cs" />
     <Compile Include="BuffComponent.cs" />
-    <Compile Include="UnitConfig.cs" />
-    <Compile Include="BuffConfig.cs" />
+    <Compile Include="Config\UnitConfig.cs" />
+    <Compile Include="Config\BuffConfig.cs" />
     <Compile Include="UnitFactory.cs" />
     <Compile Include="UnitType.cs" />
     <Compile Include="BuffType.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="UnitComponent.cs" />
-    <Compile Include="GlobalConfig.cs" />
-    <Compile Include="NodeConfig.cs" />
+    <Compile Include="Config\GlobalConfig.cs" />
+    <Compile Include="Config\NodeConfig.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
