Component和Entity之间增加泛型约束,例如: BuffComponent继承于Component<Unit>,所以BuffComponent只能挂在Unit上,不能挂在World上

--- a/CSharp/Game/Model/Model.csproj
+++ b/CSharp/Game/Model/Model.csproj
@@ -47,8 +47,12 @@
   <ItemGroup>
     <Compile Include="Buff.cs" />
     <Compile Include="BuffComponent.cs" />
+    <Compile Include="ConfigComponent.cs" />
     <Compile Include="Config\UnitConfig.cs" />
     <Compile Include="Config\BuffConfig.cs" />
+    <Compile Include="FactoryAttribute.cs" />
+    <Compile Include="FactoryComponent.cs" />
+    <Compile Include="IFactory.cs" />
     <Compile Include="UnitFactory.cs" />
     <Compile Include="UnitType.cs" />
     <Compile Include="BuffType.cs" />
