--- a/CSharp/Game/Model/Model.csproj
+++ b/CSharp/Game/Model/Model.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Config\BuffConfig.cs" />
     <Compile Include="FactoryAttribute.cs" />
     <Compile Include="Component\FactoryComponent.cs" />
+    <Compile Include="IAssemblyLoader.cs" />
     <Compile Include="IFactory.cs" />
     <Compile Include="Component\UnitComponent.cs" />
     <Compile Include="BuffType.cs" />
@@ -67,6 +68,8 @@
     <Compile Include="Config\NodeConfig.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="World.cs" />
+    <Compile Include="UnitEventAttribute.cs" />
+    <Compile Include="WorldEventAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
