EventComponent类搭配不同的attribute可以用来分发,例如可以分发:消息,buff效果,技能效果,事件等

--- a/CSharp/Game/Controller/Controller.csproj
+++ b/CSharp/Game/Controller/Controller.csproj
@@ -57,7 +57,7 @@
     <Compile Include="ConfigCategory\UnitCategory.cs" />
     <Compile Include="NodeType.cs" />
     <Compile Include="Factory\UnitFactory.cs" />
-    <Compile Include="WorldEventType.cs" />
+    <Compile Include="EventType.cs" />
     <Compile Include="UnitType.cs" />
   </ItemGroup>
   <ItemGroup>
