--- a/CSharp/Platform/TNet/TNet.csproj
+++ b/CSharp/Platform/TNet/TNet.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TBuffer.cs" />
     <Compile Include="TcpAcceptor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
