--- a/CSharp/Platform/Common/packages.config
+++ b/CSharp/Platform/Common/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="mongocsharpdriver" version="1.9.2" targetFramework="net45" />
+  <package id="mongocsharpdriver" version="1.10.0-rc0" targetFramework="net45" />
   <package id="NLog" version="3.1.0.0" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
 </packages>
