--- a/CSharp/Platform/TNetTest/TNetTest.csproj
+++ b/CSharp/Platform/TNetTest/TNetTest.csproj
@@ -52,6 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TSocketTest.cs" />
     <Compile Include="TcpListenerTest.cs" />
   </ItemGroup>
   <ItemGroup>
