--- a/CSharp/Platform/UNet/UNet.csproj
+++ b/CSharp/Platform/UNet/UNet.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D0B4CFAC-A368-4742-9863-68776CFA9938}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ENet</RootNamespace>
-    <AssemblyName>ENet</AssemblyName>
+    <RootNamespace>UNet</RootNamespace>
+    <AssemblyName>UNet</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
