enet mtu 改成512,启用crc校验

--- a/CSharp/Platform/UNetTest/UNetTest.csproj
+++ b/CSharp/Platform/UNetTest/UNetTest.csproj
@@ -54,7 +54,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UNetClientServerTest.cs" />
+    <Compile Include="UServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
