--- a/CSharp/Platform/UNetTest/UNetTest.csproj
+++ b/CSharp/Platform/UNetTest/UNetTest.csproj
@@ -65,6 +65,10 @@
       <Project>{3bd499ff-3c34-4920-8b21-c55fba580843}</Project>
       <Name>Network</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TNet\TNet.csproj">
+      <Project>{b42d431a-3a54-4649-942a-c5356d7f9fbc}</Project>
+      <Name>TNet</Name>
+    </ProjectReference>
     <ProjectReference Include="..\UNet\UNet.csproj">
       <Project>{d0b4cfac-a368-4742-9863-68776cfa9938}</Project>
       <Name>UNet</Name>
